@@ -16,6 +16,7 @@ controller_machine_type = "n1-standard-2"
 controller_image        = "projects/schedmd-slurm-public/global/images/family/schedmd-slurm-20-11-7-hpc-centos-7"
 controller_disk_type    = "pd-standard"
 controller_disk_size_gb = 50
+# controller_shielded_instance = true
 # controller_labels = {
 #   key1 = "val1"
 #   key2 = "val2"
@@ -40,6 +41,7 @@ login_machine_type = "n1-standard-2"
 login_image        = "projects/schedmd-slurm-public/global/images/family/schedmd-slurm-20-11-7-hpc-centos-7"
 login_disk_type    = "pd-standard"
 login_disk_size_gb = 20
+# login_shielded_instance = true
 # login_labels = {
 #   key1 = "val1"
 #   key2 = "val2"
@@ -88,6 +90,7 @@ partitions = [
     zone                 = "us-central1-a"
     image                = "projects/schedmd-slurm-public/global/images/family/schedmd-slurm-20-11-7-hpc-centos-7"
     image_hyperthreads   = true
+    shielded_instance    = false
     compute_disk_type    = "pd-standard"
     compute_disk_size_gb = 20
     compute_labels       = {}
@@ -110,6 +113,7 @@ partitions = [
   #    zone                 = "us-central1-a"
   #    image                = "projects/schedmd-slurm-public/global/images/family/schedmd-slurm-20-11-7-hpc-centos-7"
   #    image_hyperthreads   = true
+  #    shielded_instance    = false
   #
   #    compute_disk_type    = "pd-ssd"
   #    compute_disk_size_gb = 20
